fix: fully align all components and styles with the provided design

--- a/public/css/gcc-theme.css
+++ b/public/css/gcc-theme.css
@@ -38,14 +38,14 @@
     --color-minor: var(--color-yellow);
     --color-link: var(--color-accent);
     --color-focus: var(--color-yellow);
-        --font-primary: 'Inter', sans-serif;
+    --font-primary: 'Inter', sans-serif;
     --font-secondary: georgia,"Times New Roman",times,serif;
-    --font-heading-1: var(--font-secondary);
-    --font-heading-2: var(--font-secondary);
-    --font-heading-3: var(--font-secondary);
-    --font-heading-4: var(--font-secondary);
-    --font-heading-5: var(--font-secondary);
-    --font-heading-6: var(--font-secondary);
+    --font-heading-1: var(--font-primary);
+    --font-heading-2: var(--font-primary);
+    --font-heading-3: var(--font-primary);
+    --font-heading-4: var(--font-primary);
+    --font-heading-5: var(--font-primary);
+    --font-heading-6: var(--font-primary);
     --font-size: 1rem;
     --font-size-smallest: calc(var(--font-size) * 0.3);
     --font-size-smaller: calc(var(--font-size) * 0.5);
@@ -103,6 +103,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-heading-1);
     font-weight: var(--heading-font-weight);
     line-height: var(--heading-1-line-height);
 }
