--- a/public/css/maroon.css
+++ b/public/css/maroon.css
@@ -66,6 +66,7 @@ select:focus {
 /* Headers */
 h1, h2, h3, h4, h5, h6 {
     color: #800000;
+    font-family: 'Inter', sans-serif;
 }
 
 /* Navigation/Menu items */
